--- a/styles/global.css
+++ b/styles/global.css
@@ -17,6 +17,7 @@ html,
   --clr-neutral-150: #cecfd2;
   --clr-neutral-200: #c2c2c2;
   --clr-neutral-250: #a8a8a8;
+  --clr-neutral-350: #909090;
   --clr-neutral-500: #6a726d;
   --clr-neutral-550: #3f3f3f;
   --clr-neutral-700: #292929;
@@ -134,6 +135,31 @@ ul {
 /* ---------------------- */
 /* Utility Classes       */
 /* -------------------- */
+.margin-block-s{
+  margin-top:0.5em;
+  margin-bottom:0.5em;
+}
+.margin-block-m{
+  margin-top:1em;
+  margin-bottom:1em;
+}
+.padding-block-s{
+  padding-top:0.5em;
+  padding-bottom:0.5em;
+}
+.padding-block-m{
+  padding-top:1em;
+  padding-bottom:1em;
+}
+.align-left{
+  text-align: left;
+}
+.align-right{
+  text-align: right;
+}
+.align-center{
+  text-align: center;
+}
 .font-size-xs{
   font-size: 0.75rem;
 }
@@ -337,7 +363,6 @@ li {
   font-weight: 300;
 }
 .button {
-  margin: 0 auto;
   color: #ffffff;
   font-weight: 500;
   background-color: var(--system-b-blue);
