--- a/components/services_portal/services_portal.module.css
+++ b/components/services_portal/services_portal.module.css
@@ -127,9 +127,32 @@ padding:0 0.3em;
     gap:1.3em;
 }*/
 .billing_form{
+    position:relative;
+    width: max-content;
     display:grid;
     grid-gap:1.3em;
+
     grid-template-columns: 1fr 1fr;
+}
+.updating_form > *:not(:nth-child(1)){
+    opacity:0.5;
+    user-select: none;
+    pointer-events: none;
+}
+.loading_overlay{
+    position:absolute;
+    left:0;
+    top:0;
+    right:0;
+    bottom:0;
+    z-index:2;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    user-select: none;
+    pointer-events: none;
+
+
 }
 .submit_buttons{
     grid-column-start: -3;
@@ -142,42 +165,81 @@ padding:0 0.3em;
 }
 
 
-/*custom payment*/
-.content_inner_custom_payment{
-    display:flex;
-    overflow: hidden;
-    justify-content: space-between;
+
+
+
+
+
+/*Installation and registration*/
+.content_inner_reg_ins_nav{
+/*width:80%;*/
 }
-.custom_payment_form{
-    max-width:50%;
+.content_inner_reg_ins_nav ul{
+    margin-bottom: 3.9em;
+    display: flex;
+    justify-content: space-around;
+}
+.tab, .active_tab{
+    cursor:pointer;
+    position:relative;
+    margin-bottom:1.96em;
+    padding:0.3em 0.6em;
+font-size: 1.13rem;
+    color:var(--clr-neutral-500);
+}
+.tab::before{
+    content:"";
+    position:absolute;
+    background:var(--clr-neutral-500);
+    height:0.13em;
+    width:100%;
+    bottom:0;
+    left:0.6em;
+    transform-origin: left;
+    transform: scaleX(0.11);
+    transition:all 0.3s ease;
 
 }
-.custom_payment_token_wrapper{
-    opacity:0;
-    transform: translateX(50%);
-    transition: all 0.3s ease;
+.tab:hover{
+    color:var(--clr-neutral-800);
 }
-.custom_payment_token_wrapper.visible{
-    max-width:50%;
-    opacity:1;
-    transform: translateX(0);
+.tab:hover::before{
+    transform: scaleX(0.89);
+    background:var(--clr-neutral-800);
 }
-.token_field{
-    display:flex;
+.active_tab{
+    color:var(--clr-neutral-800);
+}
+.active_tab::before{
+    content:"";
+    position:absolute;
+    background:var(--clr-neutral-800);
+    height:0.13em;
+    width:100%;
+    bottom:0;
+    left:0.6em;
+    transform-origin: left;
+    transform: scaleX(0.89);
+    transition:all 0.3s ease;
+}
+
+
+
+.content_inner_reg_ins_inner_content{
 
 }
-.token_price_table{
-width:100%;
-    border-collapse: collapse;
+
+
+/*edit account*/
+.change_password_section, .email_username_section{
+ display:flex;
+    gap:1.1em;
+    flex-direction: column;
+    margin-bottom:2.5em;
 }
-.token_price_table > thead > tr th{
-    border-bottom: 1px solid var(--clr-neutral-550);
-    margin-bottom: 0.5em;
+.change_password_section h3{
     color: var(--clr-neutral-800);
 }
-.token_price_table th{
-    padding: 0.5em 0.8em;
-}
-.token_price_table td{
-    padding: 0.3em 0.8em;
+.content_inner_edit_account{
+    width: max-content;
 }
