--- a/components/services_portal/walletManagement/wallet_management.module.css
+++ b/components/services_portal/walletManagement/wallet_management.module.css
@@ -226,6 +226,7 @@ font-size:0.8em;
 }
 .activity_reports_filter{
     display:grid;
+    grid-column-gap:0.25em;
     grid-template-columns: repeat(3, 1fr) 0.5fr;
     grid-template-rows: repeat(3, 1fr);
 }
@@ -245,8 +246,16 @@ font-size:0.8em;
     grid-row: 1/2;
 }
 .filter_report_actions{
+    display: flex;
+
+    flex-direction: column;
+    gap:1em;
     grid-column: 4/5;
     grid-row: 1/3;
+}
+.download_report_wrapper{
+    display:flex;
+    align-items: center;
 }
 .activity_reports_results{
 
@@ -277,4 +286,8 @@ font-size:0.8em;
 }
 .activity_reports_title_step:hover::before{
     right:0;
+}
+.sort_icon{
+    width:1.5em;
+    height:1.5em;
 }
