--- a/components/services_portal/services_portal.module.css
+++ b/components/services_portal/services_portal.module.css
@@ -129,6 +129,7 @@ padding:0 0.3em;
 .billing_form{
     position:relative;
     display:grid;
+    margin-bottom:5em;
     grid-gap:1.3em;
 
     grid-template-columns: 1fr 1fr;
