--- a/styles/global.css
+++ b/styles/global.css
@@ -506,6 +506,17 @@ li {
   border:2px solid #ffffff00;
   transition: all 0.3s;
 }
+.button_basic_long_outline{
+  min-width: 13rem;
+  border-radius:12px;
+  color: var(--clr-neutral-50);
+  background:#fefefe00;
+  border:2px solid var(--clr-neutral-50);
+  transition: all 0.3s;
+}
+.button_basic_long_outline:hover{
+  background:#fefefe44;
+}
 .button_basic_long_auth {
   min-width: 13rem;
   border-radius:12px;
@@ -538,7 +549,6 @@ li {
 
 /*trigger state using checkbox*/
 .button_basic_long:focus-within {
-  width: 13rem;
   background-color: var(--main-color-ctaq);
 }
 .cancel_custom{
@@ -1212,4 +1222,11 @@ padding: 0.8em;
 }
 .anim_space{
   height:600px;
+}
+
+
+.wide{
+
+  padding:0;
+  max-width:100vw;
 }
