--- a/styles/global.css
+++ b/styles/global.css
@@ -29,6 +29,7 @@ html,
   --clr-main: #051624;
   --clr-main-800: #0a2840;
   --clr-main-900: #051624;
+  --clr-text-highlight: #4bccf3;
   --main-color-light: #072136;
   --main-color-hover: #0c375a;
   --main-color-somewhat-light: #186eb4;
@@ -211,16 +212,25 @@ input, select{
 /* ---------------------- */
 /* Utility Classes       */
 /* -------------------- */
-
-.main_wrapper, .container {
-  top:calc(var(--offset-top) + 2.2em);
-  margin-top:1em;
+#ezt-main-page{
+  opacity:0;
+  margin-bottom:2em;
+}
+.first_container, .container {
+  margin-top:calc(var(--offset-top) + 4.2em);
   position:relative;
 
   padding: 0 2em;
   max-width: 80rem;
   margin-left: auto;
   margin-right: auto;
+}
+.section{
+  position:relative;
+
+  padding: 0 2em;
+  max-width: 80rem;
+  margin: 1em auto 12em;
 }
 .main-color{
   color:var(--clr-primary);
@@ -395,11 +405,6 @@ main {
     outline: 1px solid #ea2222;
 
 }*/
-.section{
-  margin: 0 auto;
-  max-width: 62.5rem;
-  padding: 0 1.5rem;
-}
 a {
   font-family: var(--font-fam);
   color: #ffffff;
