--- a/components/navigation/navbar2.module.css
+++ b/components/navigation/navbar2.module.css
@@ -322,3 +322,64 @@
     transform-origin: 100% 50%;
     transition: transform .3s cubic-bezier(.25,.8,.25,1);
 }
+.bm_memu_wrapper{
+    height: calc(12px + 0.7em);
+    width:2em;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    position:relative;
+}
+.bm_menu{
+    position:relative;
+    height:2px;
+    width:1.8em;
+    background-color: var(--clr-neutral-50);
+    border-radius:25px;
+    transition: all 0.25s;
+}
+.bm_menu::before, .bm_menu::after{
+    position: absolute;
+    content:'';
+    height:3px;
+    width:1.8em;
+    left:0;
+    right:0;
+    background-color: var(--clr-neutral-50);
+    border-radius:25px;
+    transition: all 0.25s;
+}
+.bm_menu::before{
+    top:-0.35em;
+    transition: all 0.42s var(--cubic-bezier);
+}
+.bm_memu_wrapper:hover .bm_menu::before{
+    transform-origin: left;
+    transform: scaleX(0.6);
+}
+.bm_memu_wrapper:hover .bm_menu::after{
+    transform-origin:right;
+    transform: scaleX(0.3);
+}
+.bm_menu::after{
+    bottom:-0.35em;
+}
+.bm_menu.open, .bm_menu.open::before, .bm_menu.open::after{
+    background-color: var(--clr-neutral-800);
+}
+.bm_menu.open::after{
+    transform-origin:0;
+    transform: translateX(50%) translateY(-650%) rotate(90deg) scaleX(1);
+}
+.bm_menu.open, .bm_menu.open::before{
+    transform:rotate(45deg);
+}
+.bm_menu.open::before{    transition: all 0.3s var(--cubic-bezier);
+
+    transform: translateX(50%) translateY(650%) rotate(45deg) scaleX(0.25);
+}
+
+.navbar_wrapper_scroll .bm_menu, .navbar_wrapper_scroll .bm_menu::before, .navbar_wrapper_scroll .bm_menu::after{
+    background-color: var(--clr-neutral-800);
+}
