--- a/styles/global.css
+++ b/styles/global.css
@@ -82,13 +82,12 @@ html,
   --fs-075:0.75rem;
   --fs-087:0.875rem;
   --fs-1:1rem;
-  --fs-100:1.125rem;
-  --fs-125:1.25rem;
-  --fs-136:1.33rem;
-  --fs-156:1.563rem;
-  --fs-195:1.953rem;
-  --fs-244:2.441rem;
-  --fs-300:3.052rem;
+  --fs-300: 1rem;
+  --fs-400: 1.25rem;
+  --fs-500: 1.8rem;
+  --fs-600: 2.827rem;
+  --fs-700: 4rem;
+  --fs-800: 5.653rem;
   --cubic-bezier: cubic-bezier(0.6,-0.05,0.01,0.99);
   --section-spacing-inner: 6em;
 
@@ -254,6 +253,9 @@ a:hover::before{
   padding: 0 2em;
   max-width: 93rem;
   margin: 1em auto 12em;
+}
+.section-full-width{
+  max-width: 100%;
 }
 .main-color{
   color:var(--clr-primary);
@@ -1356,4 +1358,33 @@ padding: 0.8em;
   top:96%;
   bottom:0;
   background-color: var(--clr-text-highlight) !important;
+}
+
+.underlined_link{
+  position:relative;
+  color:var(--clr-text-highlight) !important;
+}
+
+.underlined_link::before{
+  content:"";
+  position: absolute;
+  left:0;
+  right:85%;
+  top:96%;
+  bottom:0;
+  transition: all 0.3s var(--cubic-bezier);
+  background-color: var(--clr-text-highlight) !important;
+}
+.underlined_link:hover::before{
+  content:"";
+  position: absolute;
+  left:0;
+  right:0;
+  top:96%;
+  bottom:0;
+  background-color: var(--clr-text-highlight) !important;
+}
+.section-heading{
+  font-size: var(--fs-600);
+  font-weight: 200;
 }
