--- a/styles/subtitle.module.css
+++ b/styles/subtitle.module.css
@@ -8,12 +8,13 @@
 
 }
 .video_background{
-    position: fixed;
-    top:0;
-    left:0;
+    position:absolute;
     width: 100%;
+    height: 100%;
+    max-width:100%;
+    max-height:100%;
     object-fit: cover;
-    z-index: 0;
+    z-index: -1;
 }
 .main_inner{
     position:relative;
@@ -129,7 +130,7 @@ background: #ffffff;
     position: relative;
     width: 100%;
 
-    /*background:var(--main-color);*/
+    background:var(--clr-main);
 
 
 }
@@ -1583,8 +1584,8 @@ text-align: center;
     position: sticky;
     top: 59px;
     z-index: 22;
-
-    /*background-color: var(--main-color-light);*/
+align-items: center;
+    justify-content: center;
     display:flex;
     border-top: 1px solid #191919;
     background-color: #fefefe;
