--- a/components/services_portal/services_portal.module.css
+++ b/components/services_portal/services_portal.module.css
@@ -128,11 +128,11 @@ padding:0 0.3em;
 }*/
 .billing_form{
     position:relative;
-    display:grid;
+  /*  display:grid;*/
     margin-bottom:5em;
-    grid-gap:1.3em;
+   /* grid-gap:1.3em;
 
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;*/
 }
 .updating_form > *:not(:nth-child(1)){
     opacity:0.5;
